--- a/ByteMarket/backend/src/main/resources/templates/reviews.html
+++ b/ByteMarket/backend/src/main/resources/templates/reviews.html
@@ -27,6 +27,6 @@
 
 {{^reviews}}
 <div class="text-center">
-    <h3 class="py-4 mb-4 defaultText">Todavía no hay productos en esta sección</h3>
+    <h3 class="py-4 mb-4 defaultText">Todavía no hay reseñas en esta sección</h3>
 </div>
 {{/reviews}}
