--- a/ByteMarket/backend/src/main/resources/templates/reviews.html
+++ b/ByteMarket/backend/src/main/resources/templates/reviews.html
@@ -1,14 +1,16 @@
 {{#reviews}}
-    <div class="container mt-4">
-        <h3>Mis Reseñas</h3>
-        <div class="row">
-            {{#reviewStars}}
-            <div class="col-md-6">
-                <div class="card mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">{{owner}}</h5>
-                        <p class="card-text">{{description}}</p>
-                        <p><span class="text-warning">
+<div class="container mt-1">
+    <h2 class="fw-bolder mb-3">Reseñas</h2>
+</div>
+<div class="container mt-4">
+    <div class="row">
+        {{#reviewStars}}
+        <div class="col-md-6">
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">{{owner}}</h5>
+                    <p class="card-text">{{description}}</p>
+                    <p><span class="text-warning">
                             {{#stars}}
                             <i class="bi bi-star-fill"></i>
                             {{/stars}}
@@ -16,17 +18,20 @@
                             <i class="bi bi-star"></i>
                             {{/emptyStars}}
                         </span> - {{rating}}/5</p>
-                    </div>
                 </div>
             </div>
-            {{/reviewStars}}
         </div>
+        {{/reviewStars}}
     </div>
+</div>
 
 {{/reviews}}
 
 {{^reviews}}
+<div class="container mt-1">
+    <h2 class="fw-bolder mb-2">Reseñas</h2>
+</div>
 <div class="text-center">
-    <h3 class="py-4 mb-4 defaultText">Todavía no hay productos en esta sección</h3>
+    <h3 class="py-4 mb-4 defaultText">Todavía no hay reseñas en esta sección</h3>
 </div>
 {{/reviews}}
