--- a/ByteMarket/backend/src/main/resources/templates/navbar_profile.html
+++ b/ByteMarket/backend/src/main/resources/templates/navbar_profile.html
@@ -11,12 +11,14 @@
             aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                {{^admin}} <!-- Admin don't have this parameters -->
                 {{#isOwnProfile}} <!-- Visible only for own users -->
                 <li class="nav-item"><a class="nav-link" href="/profile?filter=favorites" id="favoritesLink">Favoritos</a></li>
                 <li class="nav-item"><a class="nav-link" href="/profile?filter=reviews" id="reviewsLink">Reseñas</a></li>
                 <li class="nav-item"><a class="nav-link" href="/profile?filter=historyPurchase" id="historyPurchaseLink">Últimas compras</a></li>
                 <li class="nav-item"><a class="nav-link" href="/profile?filter=historySales" id="historySalesLink">Últimas ventas</a></li>
                 {{/isOwnProfile}}
+                {{/admin}}
                 {{^isOwnProfile}} <!-- Visible for everybody -->
                     <li class="nav-item">
                         <a class="nav-link" href="/profile/{{id}}?filter=reviews" id="reviewsLink">Reseñas</a>
