--- a/ByteMarket/backend/src/main/resources/templates/reviews.html
+++ b/ByteMarket/backend/src/main/resources/templates/reviews.html
@@ -18,6 +18,15 @@
                             <i class="bi bi-star"></i>
                             {{/emptyStars}}
                         </span> - {{rating}}/5</p>
+
+                    {{#admin}}
+                    <form action="/review/{{id}}/delete" method="post">
+                        <input type="hidden" name="_csrf" value="{{token}}"/>
+                        <button type="submit" class="btn btn-danger btn-sm">
+                            <i class="bi bi-trash"></i> 
+                        </button>
+                    </form>                                       
+                    {{/admin}}
                 </div>
             </div>
         </div>
