--- a/ByteMarket/backend/src/main/resources/templates/chat_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/chat_template.html
@@ -57,7 +57,7 @@
                         <li class="list-group-item d-flex align-items-center justify-content-between">
                             <form action="/chat/{{id}}" method="GET" class="w-100">
                                 <button type="submit" class="btn w-100 text-decoration-none">
-                                    <i class="bi-person-fill me-1">{{userBuyer.name}} -</i>
+                                    <i class="bi-person-fill me-1"></i> {{userBuyer.name}} -
                                     <i class="text-decoration-none">{{product.name}}</i>
                                 </button>
                             </form>
