minor css changes

--- a/ByteMarket/backend/src/main/resources/static/css/profileStyle.css
+++ b/ByteMarket/backend/src/main/resources/static/css/profileStyle.css
@@ -30,3 +30,8 @@
     margin-top: 50px; 
     color: rgb(150, 150, 150);
 }
+
+.defaultChatText{
+    margin-top: 30px;
+    color: rgb(150, 150, 150);
+}
