--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -108,7 +108,7 @@
                     <inf>Ventas: {{salesNumber}}<br></inf>
                     <inf>Compras: {{purchasesNumber}}<br></inf>
                     <span class="text-muted">
-                        {{rating}}/5 - {{reviewsNumber}} reseñas
+                        {{rating}}/5 <i class="bi bi-star-fill"></i> - {{reviewsNumber}} reseñas
                     </span>
                 </div>
             </div>
