--- a/ByteMarket/backend/src/main/resources/templates/chat_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/chat_template.html
@@ -87,7 +87,7 @@
                 <div class="flex-grow-1 p-3 overflow-auto" style="background-color: #f8f9fa;" id="messages-container">
                     {{#messages}}
                     <div class="d-flex mb-4 justify-content-start align-items-center">
-                        <div class="p-3 rounded shadow-sm d-flex align-items-center w-100">
+                        <div class="p-3 rounded shadow-sm d-flex align-items-center w-100 bg-white">
                             <a href="../profile/{{sender.id}}" class="d-flex align-items-center text-decoration-none">
                             {{#sender.image}}
                             <img class="profile-pic mb-3 rounded-circle" src="/user/image/{{sender.id}}"
