if isSold do not show in home

--- a/ByteMarket/backend/src/main/resources/templates/productByCategory.html
+++ b/ByteMarket/backend/src/main/resources/templates/productByCategory.html
@@ -32,6 +32,7 @@
             </div>
             <div class="row otherProducts" id="products-list">
                 {{#products}}
+                {{^sold}}
                 <div class="otherProduct col-3">
                     <a href="/product/{{id}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
@@ -52,6 +53,7 @@
                         </div>
                     </a>
                 </div>
+                {{/sold}}
                 {{/products}}
             </div>
         </div> 
