--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -58,6 +58,7 @@
             </div>
             <div class="row otherProducts" id="products-list">
                 {{#other_products}}
+                {{^sold}}
                 <div class="otherProduct col-3">
                     <a href="/product/{{id}}" style="text-decoration: none;">
                         <div class="productCard card h-100">
@@ -76,6 +77,7 @@
                         </div>
                     </a>
                 </div>
+                {{/sold}}
                 {{/other_products}}
             </div>
         </div>
