--- a/ByteMarket/backend/src/main/resources/static/css/formStyle.css
+++ b/ByteMarket/backend/src/main/resources/static/css/formStyle.css
@@ -11,7 +11,7 @@
     background-color: #777;
     font-weight: bold;
     border-radius: 0.8em;
-    z-index: 1; /*Para que un elemento no se superponga con otro junto*/
+    z-index: 1; /* To prevent an element from overlapping with another */
 }
 /* #map{
     width: 100%;
@@ -29,18 +29,18 @@
     background-color: #823400;
     color: white;
 }
-/* Garantiza que el footer siempre esté al final */
+/* Ensures that the footer is always at the bottom */
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
-/* Ajusta el footer para que esté al final */
+/* Adjusts the footer to be at the bottom */
 #footer {
-    margin-top: auto; /* Empuja el footer al fondo */
+    margin-top: auto; /* Pushes the footer to the bottom */
 }
 
-/*Form error fields display control*/
+/* Form error fields display control */
 .ocult{
     display: none;
 }
