--- a/ByteMarket/backend/src/main/resources/static/css/login.css
+++ b/ByteMarket/backend/src/main/resources/static/css/login.css
@@ -1,5 +1,5 @@
-/* Igual que el estilo que ya tienes, solo ajustamos un par de detalles */
-.container{
+
+.container {
     margin-top: 60px;
     margin-bottom: 60px;
     text-align: center;
@@ -9,13 +9,13 @@
 .header-logo {
     padding-left: 50px;
 }
-.headerContainer{
+.headerContainer {
     justify-content: space-between;
 }
-.form{
+.form {
     text-align: left;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color:black;
+    color: black;
     padding: 5%;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -48,13 +48,13 @@
 .btn-close {
     color: white;
 }
-/* Garantiza que el footer siempre esté al final */
+/* Ensures that the footer is always at the bottom */
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
-/* Ajusta el footer para que esté al final */
+
 #footer {
-    margin-top: auto; /* Empuja el footer al fondo */
+    margin-top: auto; 
 }
