--- a/ByteMarket/public/homeStyle.css
+++ b/ByteMarket/public/homeStyle.css
@@ -21,7 +21,7 @@
     width: 100%;
 }
 
-/* Personalizar la barra de desplazamiento */
+/* Customize the scrollbar */
 .topProducts::-webkit-scrollbar {
     height: 10px;
 }
@@ -35,21 +35,21 @@
 }
 
 .topProducts::-webkit-scrollbar-track {
-    background: transparent; /* Color del fondo de la barra de desplazamiento */
+    background: transparent; /* Background color of the scrollbar */
 }
 
 .topProducts::-webkit-scrollbar-thumb {
-    background: #777; /* Color de la barra de desplazamiento */
+    background: #777; /* Color of the scrollbar */
     border-radius: 10px;
 }
 
 .topProducts::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Color de la barra de desplazamiento al pasar el ratón por encima */
+    background: #555; /* Color of the scrollbar on hover */
 }
 
 .productCard{
     width: 100%;
-    border:none; /* Quito el borde */
+    border:none; /* Remove the border */
 }
 
 .topProduct{ 
@@ -71,7 +71,6 @@
 
 .btn-custom-register {
     margin-left: 50px;
-
 }
 
 .header-logo {
@@ -183,5 +182,5 @@
 .productCard .card-img-top {
     object-fit: cover;
     width: 100%;
-    height: 200px; /* Todos las imágenes tendrán la misma altura */
+    height: 200px; /* All images will have the same height */
 }
