Load more omiting sold products

--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -90,10 +90,9 @@
 
         <div class="d-flex justify-content-center">
             <button class="btn btn-custom headerButton" id="load-more" type="button"
-                data-current-page="{{currentPage}}">
+                data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}">
                 <span class="fav-sellText">Cargar más</span>
-                <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status"
-                    style="display: none;"></span>
+                <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status" style="display: none;"></span>
             </button>
         </div>
 
