--- a/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/productDetail_template.html
@@ -42,7 +42,7 @@
                     <div class="d-grid gap-2">
                         {{^product.isSold}}
                         {{#isOwner}}
-                        <form action="/edit/{{product.id}}" method="post">
+                        <form action="/editProduct/{{product.id}}" method="get">
                             <button type="submit" class="btn btn-custom w-100">
                                 <i class="bi bi-heart-fill m-2" style="color: white;"></i>Editar Producto
                             </button>
