--- a/ByteMarket/backend/src/main/resources/templates/home_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/home_template.html
@@ -23,14 +23,16 @@
 {{>navbar_home}}
 
 <body>
+
     {{#top_seller_products}}
     <section class="py-4">
         <div class="container">
             <h2 class="fw-bolder mb-3">Productos destacados</h2>
-    
+
             <div class="carousel-container">
                 <div class="carousel-scroll" id="product-carousel">
-                    
+
+                    {{#top_seller_products}}
                     <div class="product-item">
                         <a href="/product/{{id}}" style="text-decoration: none;">
                             <div class="productCard card h-100">
@@ -39,8 +41,7 @@
                                 {{/thumbnail}}
                                 {{^thumbnail}}
                                 <img class="card-img-top"
-                                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADh..."
-                                    alt="{{name}}" />
+                                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADh..." alt="{{name}}" />
                                 {{/thumbnail}}
                                 <div class="card-body p-4 text-center">
                                     <h5 class="fw-bolder">{{name}}</h5>
@@ -49,12 +50,15 @@
                             </div>
                         </a>
                     </div>
-                    
+                    {{/top_seller_products}}
+
                 </div>
             </div>
         </div>
     </section>
     {{/top_seller_products}}
+
+
 
 
     <section class="py-4">
@@ -91,10 +95,11 @@
         </div>
 
         <div class="d-flex justify-content-center">
-            <button class="btn btn-custom headerButton" id="load-more" type="button"
-                data-current-page="{{currentPage}}" data-total-pages="{{totalPages}}">
+            <button class="btn btn-custom headerButton" id="load-more" type="button" data-current-page="{{currentPage}}"
+                data-total-pages="{{totalPages}}">
                 <span class="fav-sellText">Cargar más</span>
-                <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status" style="display: none;"></span>
+                <span id="spinner" class="spinner-border spinner-border-sm text-light ms-2" role="status"
+                    style="display: none;"></span>
             </button>
         </div>
 
