--- a/ByteMarket/backend/src/main/resources/templates/editProduct.html
+++ b/ByteMarket/backend/src/main/resources/templates/editProduct.html
@@ -34,13 +34,14 @@
             </div>
             <div class="col-md-6">
                 <label for="category" class="form-label">Categoría</label>
-                <select class="form-select" id="category" required>
+                <select class="form-select" id="category" name="category" required>
                     <option value="">Seleccione una categoría</option>
-                    <option value="electronic">Electrónica</option>
-                    <option value="phone">Móvil</option>
-                    <option value="computer">Ordenador</option>
-                    <option value="games">Videojuegos</option>
-                    <option value="others">Otros</option>
+                    <option value="Móviles">Móviles</option>
+                    <option value="Ordenadores">Ordenadores</option>
+                    <option value="Tablets">Tablets</option>
+                    <option value="Auriculares">Auriculares</option>
+                    <option value="SmartWatches">SmartWatches</option>
+                    <option value="Otros">Otros</option>
                 </select>
             </div>
         </div>
