--- a/ByteMarket/backend/src/main/resources/templates/footer.html
+++ b/ByteMarket/backend/src/main/resources/templates/footer.html
@@ -1,1 +1,1 @@
-<footer class="bg-dark text-white text-center py-2">ByteMarket</footer> <!-- Podemos añadirle más cosas -->
+<footer class="bg-dark text-white text-center py-2">ByteMarket</footer> 
