--- a/ByteMarket/backend/src/main/resources/templates/login_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/login_template.html
@@ -22,7 +22,7 @@
         <div class="container-fluid px-0">
             <div class="align-items-center headerContainer">
                 <a href="/" class="col-2 text-decoration-none p-0">
-                    <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
+                    <div class="d-flex align-items-center text-white header-logo"> 
                         <img src="images/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                         <h5 class="fw-bolder mb-0">ByteMarket</h5>
                     </div>
