--- a/ByteMarket/backend/src/main/resources/templates/signin_template.html
+++ b/ByteMarket/backend/src/main/resources/templates/signin_template.html
@@ -23,7 +23,7 @@
         <div class="container-fluid px-0">
             <div class="align-items-center headerContainer">
                 <a href="/" class="col-2 text-decoration-none p-0">
-                    <div class="d-flex align-items-center text-white header-logo"> <!-- Añadido clase header-logo -->
+                    <div class="d-flex align-items-center text-white header-logo"> 
                         <img src="images/favicon.ico" alt="Logo" width="40" height="40" class="me-2">
                         <h5 class="fw-bolder mb-0">ByteMarket</h5>
                     </div>
@@ -54,7 +54,7 @@
                 <label for="confirmPassword" class="form-label">Confirmar Contraseña</label>
                 <input type="password" class="form-control" id="confirmPassword" name="confirmPassword"/>
             </div>
-            <!-- Campo oculto para asignar un rol por defecto -->
+            <!-- Hidden section to assign rol as default -->
             <input type="hidden" name="roles" value="USER">
             <input type="hidden" name="_csrf" value="{{token}}"/>
             <div class="d-flex justify-content-between align-items-center mb-3">
