--- a/ByteMarket/backend/src/main/resources/templates/favorite.html
+++ b/ByteMarket/backend/src/main/resources/templates/favorite.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/productDetailsStyle.css">
     <link rel="stylesheet" href="../static/css/headerStyle.css">
+    <link rel="stylesheet" href="../static/css/homeStyle.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>{{product.title}}</title>
 </head>
@@ -45,6 +46,7 @@
                 {{/favoriteProducts}}
             </div>
         </div>
+
     </section>
 
     {{>footer}}
